# NAVI-parser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
utils/: db.py  extractor.py  parse.py  s3.py
